--- a/st.css
+++ b/st.css
@@ -223,7 +223,7 @@
     margin-top: 48px;
     object-fit: cover;
   }
-  /* Add keyframes for animations */
+ 
 @keyframes fadeSlideUp {
   from {
       opacity: 0;
@@ -246,7 +246,7 @@
   }
 }
 
-/* Enhanced main section */
+
 .mainsec {
   display: flex;
   width: 100%;
@@ -407,8 +407,9 @@
   .project-image {
     aspect-ratio: 1.5;
     width: 100%;
-    flex: 1;
+    
     transition: transform 0.3s ease;
+    object-fit: cover;
   }
   .pd:hover .project-image {
     transform: scale(1.05);
@@ -507,7 +508,7 @@
     max-width: 600px;
     gap: 12px;
     justify-content: center;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
   }
   
   .vinput {
@@ -541,6 +542,7 @@
     margin-top: 32px;
     font: 700 15px/1 Inria Sans, sans-serif;
     cursor: pointer;
+    text-align: center;
   }
   
   .footer {
